fix(modal): footer text align left

--- a/src/components/modal/modal-template.module.scss
+++ b/src/components/modal/modal-template.module.scss
@@ -231,12 +231,13 @@
   margin-right: auto;
   font-size: 11px;
   line-height: 16px;
+  text-align: left;
 
   p {
     margin: 0;
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: 400px) {
     margin: auto;
     text-align: center;
   }
@@ -245,5 +246,4 @@
 .secured-by svg {
   position: relative;
   top: 1px;
-  left: -3px;
 }
